// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`PLV8ifyCLI tests getSQLFunction with parameters 1`] = `
"DROP FUNCTION IF EXISTS plv8ify_test();
CREATE OR REPLACE FUNCTION plv8ify_test() RETURNS JSONB AS $plv8ify$
console.log('hello')
return test()

$plv8ify$ LANGUAGE plv8 IMMUTABLE STRICT;"
`;

exports[`PLV8ifyCLI tests getSQLFunction with delimiter 1`] = `
"DROP FUNCTION IF EXISTS plv8ify_test();
CREATE OR REPLACE FUNCTION plv8ify_test() RETURNS JSONB AS $function$
console.log('hello')
return test()

$function$ LANGUAGE plv8 IMMUTABLE STRICT;"
`;
